# qwen35-burn

./: Cargo.toml  README.md
bench/: compare.py  run_all.sh  run_burn.sh  run_mlx.py
examples/: bench.rs  chat.rs
src/: cache.rs  config.rs  lib.rs  model.rs  sampling.rs  tokenizer.rs  transformer.rs
src/cubecl_kernels/: attention.rs  attention_v2.rs  bridge.rs  flash_decode.rs  mod.rs
