[package]
name = "qwen35-burn"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Qwen3.5 language model inference using the Burn deep learning framework (WGPU backend)"

[features]
default = ["std"]
std = []
# wgpu with fusion (operator graph fusion) and autotune (kernel auto-selection)
wgpu = ["burn/wgpu", "burn/fusion", "burn/autotune"]
metal = ["burn/metal", "burn/fusion", "burn/autotune"]
ndarray = ["burn/ndarray"]
cuda = ["burn/cuda"]

[[example]]
name = "chat"

[[example]]
name = "bench"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", branch = "main" }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
rand = "0.10"
half = { version = "2.4", features = ["serde"] }
tracing = "0.1"
glob = "0.3"

# CubeCL for custom GPU kernels
cubecl = { path = "cubecl/crates/cubecl", features = ["wgpu"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
burn = { git = "https://github.com/tracel-ai/burn.git", branch = "main" }
